--- a/src/App.css
+++ b/src/App.css
@@ -73,7 +73,7 @@ h1{
 }
 .span{
   position:absolute; 
-  color:white;
+  color:red;
   font-weight:bold;
   font-size:clamp(1vh,6vw,8vh);    
   top:60%;
@@ -163,7 +163,7 @@ h1{
   }
   .span{
     position:absolute; 
-    color:white;
+    color:red;
     font-weight:bold;
     font-size:clamp(1vh,7vw,9vh);    
     top:70%;
@@ -236,7 +236,7 @@ h1{
   }
   .span{
     position:absolute; 
-    color:white;
+    color:red;
     font-size:clamp(1vh,6vw,8vh);    
     top:70%;
     left:50%;
